# QR-Code-Generator

.github/workflows/: docker-image.yml
api/: Dockerfile  main.py  pyproject.toml  requirements.txt
front-end-nextjs/: Dockerfile  package-lock.json  package.json
front-end-nextjs/src/app/: page.js
