[project]
name = "qr-code-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Elasaid-work",email = "elasaid.work@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "qrcode (>=8.2,<9.0)",
    "boto3 (>=1.38.39,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pillow (>=11.2.1,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
